@@ -39,40 +39,39 @@ enum
    in */
 typedef struct asmop
   {
-
-    short type;			
+    short type;
     /* can have values
        AOP_LIT    -  operand is a literal value
        AOP_REG    -  is in registers
        AOP_DIR    -  direct just a name
        AOP_DPTR   -  dptr contains address of operand
-       AOP_R0/R1  -  r0/r1 contains address of operand               
+       AOP_R0/R1  -  r0/r1 contains address of operand
        AOP_STK    -  should be pushed on stack this
-       can happen only for the result
+                     can happen only for the result
        AOP_IMMD   -  immediate value for eg. remateriazable 
        AOP_CRY    -  carry contains the value of this
        AOP_STR    -  array of strings
        AOP_ACC    -  result is in the acc:b pair
        AOP_DUMMY  -  read as 0, discard writes
     */
-    short coff;			/* current offset */
-    short size;			/* total size */
-    unsigned code:1;		/* is in Code space */
-    unsigned paged:1;		/* in paged memory  */
-    unsigned short allocated;	/* number of times allocated */
+    short coff;                 /* current offset */
+    short size;                 /* total size */
+    unsigned code:1;            /* is in Code space */
+    unsigned paged:1;           /* in paged memory  */
+    unsigned short allocated;   /* number of times allocated */
     union
       {
-	value *aop_lit;		/* if literal */
-	regs *aop_reg[4];	/* array of registers */
-	char *aop_dir;		/* if direct  */
-	regs *aop_ptr;		/* either -> to r0 or r1 */
-	struct {
-		int  from_cast_remat;   /* cast remat created this : immd2 field used for highest order*/
-		char *aop_immd1;	/* if immediate others are implied */
-		char *aop_immd2;	/* cast remat will generate this   */
-	} aop_immd;
-	int aop_stk;		/* stack offset when AOP_STK */
-	char *aop_str[4];	/* just a string array containing the location */
+        value *aop_lit;         /* if literal */
+        regs *aop_reg[4];       /* array of registers */
+        char *aop_dir;          /* if direct  */
+        regs *aop_ptr;          /* either -> to r0 or r1 */
+        struct {
+                int  from_cast_remat;   /* cast remat created this : immd2 field used for highest order*/
+                char *aop_immd1;        /* if immediate others are implied */
+                char *aop_immd2;        /* cast remat will generate this   */
+        } aop_immd;
+        symbol * aop_sym;       /* symbol when AOP_STK */
+        char *aop_str[4];       /* just a string array containing the location */
       }
     aopu;
   }
