@@ -1,5 +1,14 @@
 2011-02-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/mcs51/gen.h,
+	  src/mcs51/gen.c,
+	  sdas/linksrc/Makefile.in,
+	  support/makebin/makebin.c,
+	  support/regression/tests/bug3130806.c:
+	  Fixes from trunk.
+
+2011-02-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* sim/ucsim/z80.src/inst_cb.cc:
 	  Fixed #3166058.
 
